--- a/index.css
+++ b/index.css
@@ -49,7 +49,7 @@ div, select, progress {
   border-top: none;
 }
 
-.container .label {
+.container .name {
   -webkit-flex: 3;
   margin-left: 10px;
 }
@@ -66,6 +66,20 @@ div, select, progress {
 .container .header .item,
 .container .row .item {
   padding: 0 15px;
+}
+
+.header .options {
+  display: -webkit-flex;
+  -webkit-align-items: center;
+}
+.header .options .label {
+  -webkit-flex: 1;
+}
+.header .options .sublabel {
+  color: #666;
+  font-size: 10px;
+  font-weight: normal;
+  margin-left: 5px;
 }
 
 .container .options select,
